# remindee-bot

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml  release_matrix.json
docs/: conf.py  index.rst  reminders_formats.md
entity/: Cargo.toml
entity/src/: cron_reminder.rs  reminder.rs  user_timezone.rs
locales/: en.yml  nl.yml  ru.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_timezone_table.rs  m20221111_004928_create_reminder_table.rs
remindee-parser/: Cargo.toml
remindee-parser/src/: grammar.rs  lib.rs
remindee-parser/src/grammars/: reminder.pest
src/: bot.rs  callbacks.rs  cli.rs  controller.rs  date.rs  db.rs  err.rs  format.rs  generic_reminder.rs  generic_trait.rs  grammar.rs  handlers.rs  lang.rs  main.rs  markup.rs  parsers.rs  recurrence.rs  serializers.rs  tg.rs  tz.rs
src/entity/: common.rs  cron_reminder.rs  mod.rs  prelude.rs  reminder.rs  reminder_message.rs  reminder_occurrence.rs  user_language.rs
src/grammars/: reminder.pest
src/migration/: m20221111_005303_create_cron_reminder_table.rs  m20221113_214952_create_user_id_columns.rs  m20221115_001608_set_user_id_to_chat_id.rs  m20221119_222755_create_paused_columns.rs  m20221130_233038_remove_sent_column.rs  m20230224_061834_create_reminder_paused_columns.rs  m20230301_070153_create_reminder_pattern_column.rs  m20230526_143912_add_active_reminders_indexes.rs  m20240503_161417_create_edit_mode_columns.rs  m20241113_194950_create_msg_id_columns.rs  m20241113_200129_add_msg_id_indexes.rs  m20241114_105214_create_reply_id_columns.rs  m20241114_105217_add_reply_id_indexes.rs  m20241217_154950_remove_edit_columns.rs  m20250101_000001_create_user_language_table.rs  m20260130_130000_add_rec_id_and_message_links.rs  m20260131_120000_migrate_cron_reminders.rs  m20260204_000001_create_reminder_message_is_delivery_column.rs  m20260205_000001_add_nagging_occurrences.rs  m20260211_120000_optimize_lookup_indexes.rs  mod.rs
