[package]
name = "remindee-bot"
version = "0.2.0"
authors = ["Nikolai Oplachko <magnickolas@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Reminder bot for Telegram without bullshit"
homepage = "https://github.com/magnickolas/remindee-bot"
repository = "https://github.com/magnickolas/remindee-bot"
readme = "README.md"
keywords = ["bot", "reminder", "cron", "telegram-bot", "reminders"]
categories = ["command-line-utilities"]

[workspace]
members = ["."]

[dependencies]
async-std = "1.12"
async_once = "0.2"
chrono = "0.4"
chrono-tz = "0.8"
chronoutil = "0.2"
cron-parser = "0.7"
directories = "4.0"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.7"
sea-orm = "0.11"
pest = "2.0"
pest_derive = "2.0"
serde_json = "1.0"
bitmask-enum = "2.1"
nonempty = "0.8"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "2.2"
features = ["chrono"]

[dependencies.clap]
version = "4.1"
features = ["derive", "env", "string"]

[dependencies.sea-orm-migration]
version = "0.11"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]

[dependencies.teloxide]
version = "0.12"
features = ["macros"]

[dependencies.tokio]
version = "1.25"
features = ["rt-multi-thread", "macros"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dev-dependencies]
test-case = "3.0"
strfmt = "0.2"
