[package]
name = "remindee-bot"
version = "0.5.1"
authors = ["Nikolai Oplachko <magnickolas@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Reminder bot for Telegram without bullshit"
homepage = "https://github.com/magnickolas/remindee-bot"
repository = "https://github.com/magnickolas/remindee-bot"
readme = "README.md"
keywords = ["bot", "reminder", "cron", "telegram-bot", "reminders"]
categories = ["command-line-utilities"]

[workspace]
members = [".", "remindee-parser"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
chronoutil = "0.2"
cron-parser = "0.11"
directories = "6.0"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.7"
sea-orm = "1.0"
serde_json = "1.0"
bitmask-enum = "2.1"
nonempty = "0.12"
tzf-rs = { version = "1.0.0", default-features = false }
teloxide_tests = "0.4.0"
teloxide_tests_macros = "0.2.0"
mockall = "0.14"
remindee-parser = { version = "0.3.0", path = "remindee-parser" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "3.0"
features = ["chrono"]

[dependencies.clap]
version = "4.1"
features = ["derive", "env", "string"]

[dependencies.sea-orm-migration]
version = "1.0"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]

[dependencies.teloxide]
version = "0.17"
features = ["macros", "sqlite-storage-rustls"]

[dependencies.tokio]
version = "1.25"
features = ["rt-multi-thread", "macros"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.rust-i18n]
version = "3"

[dev-dependencies]
test-case = "3.0"
strfmt = "0.2"
serial_test = "3.2"
